--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     }
 
     .heart {
-      position: relative;
+      position: absolute;
       width: 100%;
       height: 100%;
       overflow: hidden;
+      clip-path: polygon(50% 15%, 100% 40%, 100% 85%, 50% 100%, 0 85%, 0 40%);
     }
 
     .heart img {
@@ -135,7 +136,7 @@
 <body>
   <div class="container">
     <div class="heart" onmouseenter="heartHover(true)" onmouseleave="heartHover(false)">
-      <img src="https://xatimg.com/image/22YlVQJsaEgC.jpg" alt="Background Image">
+      <img src="https://i.imgur.com/PHS6b5J.jpg" alt="Background Image">
       <audio id="audio" src="https://boxstream.danceradiouk.com/stream/1/" type="audio/mpeg"></audio>
       <div class="controls">
         <button id="playpause" class="play" onclick="togglePlayPause()">▶</button>
