--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
       height: 320px;
       position: relative;
       overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      transform: rotate(30deg);
     }
 
-    .heart {
+    .hexagon {
       position: absolute;
       width: 100%;
       height: 100%;
       overflow: hidden;
-      clip-path: polygon(50% 15%, 100% 40%, 100% 85%, 50% 100%, 0 85%, 0 40%);
+      transform: rotate(-30deg);
     }
 
-    .heart img {
+    .hexagon img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -135,7 +135,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="heart" onmouseenter="heartHover(true)" onmouseleave="heartHover(false)">
+    <div class="hexagon" onmouseenter="hexagonHover(true)" onmouseleave="hexagonHover(false)">
       <img src="https://i.imgur.com/PHS6b5J.jpg" alt="Background Image">
       <audio id="audio" src="https://boxstream.danceradiouk.com/stream/1/" type="audio/mpeg"></audio>
       <div class="controls">
@@ -195,12 +195,12 @@
     // Function to count listeners can be implemented using data from the streaming server
 
     // Function for hover animation
-    function heartHover(shouldScale) {
-      const heart = document.querySelector('.heart');
+    function hexagonHover(shouldScale) {
+      const hexagon = document.querySelector('.hexagon');
       if (shouldScale) {
-        heart.style.transform = 'scale(1.1)';
+        hexagon.style.transform = 'scale(1.1) rotate(-30deg)';
       } else {
-        heart.style.transform = 'scale(1)';
+        hexagon.style.transform = 'scale(1) rotate(-30deg)';
       }
     }
 
