--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      transform: rotate(-30deg);
+      clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     }
 
     .hexagon img {
@@ -198,9 +198,9 @@
     function hexagonHover(shouldScale) {
       const hexagon = document.querySelector('.hexagon');
       if (shouldScale) {
-        hexagon.style.transform = 'scale(1.1) rotate(-30deg)';
+        hexagon.style.transform = 'scale(1.1)';
       } else {
-        hexagon.style.transform = 'scale(1) rotate(-30deg)';
+        hexagon.style.transform = 'scale(1)';
       }
     }
 
