--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      /* Update the background image */
+      background-image: url('https://xatimg.com/image/e6ksszvofxSp.jpg');
       filter: grayscale(30%) brightness(70%);
     }
 
@@ -42,7 +44,7 @@
       position: absolute;
       bottom: 20px;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-50%) rotate(-30deg);
       display: flex;
       align-items: center;
     }
@@ -91,7 +93,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%) rotate(-30deg);
       text-align: center;
       color: #333;
     }
@@ -136,7 +138,7 @@
 <body>
   <div class="container">
     <div class="hexagon" onmouseenter="hexagonHover(true)" onmouseleave="hexagonHover(false)">
-      <img src="https://i.imgur.com/PHS6b5J.jpg" alt="Background Image">
+      <img src="https://xatimg.com/image/e6ksszvofxSp.jpg" alt="Background Image">
       <audio id="audio" src="https://boxstream.danceradiouk.com/stream/1/" type="audio/mpeg"></audio>
       <div class="controls">
         <button id="playpause" class="play" onclick="togglePlayPause()">▶</button>
