--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     .controls {
       position: absolute;
       bottom: 20px;
-      left: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       color: #e35515;
       text-align: center;
     }
@@ -84,9 +85,9 @@
 </head>
 <body>
   <div class="hexagon-container">
-    <div class="title">NUME RADIO</div>
     <div class="hexagon-radio">
       <div class="controls">
+        <div class="title">NUME RADIO</div>
         <div class="listeners">Listeners: <span id="listeners-count">0</span></div>
         <div class="current-date">Current Date: <span id="current-date"></span></div>
         <button class="play-btn"></button>
