--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .hexagon-radio {
       width: 100%;
       height: 100%;
-      background-image: url("https://xatimg.com/image/cLOCTQzlEbvB.jpg");
+      background-image: url("https://xatimg.com/image/do5fQpC1LZmk.png);
       background-size: cover;
       background-position: center;
       position: absolute;
@@ -39,9 +39,9 @@
 
     .controls {
       position: absolute;
-      bottom: 20px;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translate(-50%, -50%);
       color: #e35515;
       text-align: center;
     }
@@ -74,10 +74,6 @@
     }
 
     .title {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
       font-size: 24px;
       color: #e35515;
     }
