--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="hexagon-container">
     <div class="hexagon-radio">
       <div class="controls">
-        <div class="title">NUME RADIO</div>
+        <div class="title">xat.com/valhalla</div>
         <div class="listeners">Listeners: <span id="listeners-count">0</span></div>
         <div class="current-date">Current Date: <span id="current-date"></span></div>
         <button class="play-btn"></button>
