--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .hexagon-radio {
       width: 100%;
       height: 100%;
-      background-image: url("https://xatimg.com/image/22YlVQJsaEgC.jpg");
+      background-image: url("https://xatimg.com/image/do5fQpC1LZmk.png");
       background-size: cover;
       background-position: center;
       position: absolute;
@@ -39,7 +39,7 @@
 
     .controls {
       position: absolute;
-      bottom: 20px;
+      bottom: 50px;
       left: 50%;
       transform: translateX(-50%);
       color: #e35515;
