--- a/index.html
+++ b/index.html
@@ -75,11 +75,18 @@
 
     .title {
       position: absolute;
-      top: 20px;
+      top: 5%;
       left: 50%;
       transform: translateX(-50%);
       font-size: 24px;
       color: #e35515;
+    }
+
+    .listeners, .current-date {
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translateX(-50%);
     }
   </style>
 </head>
