--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
   <div class="hexagon-container">
     <div class="hexagon-xat">
-      <img src="https://via.placeholder.com/80" alt="Nume Xat">
+      <img src="https://via.placeholder.com/80" alt="Placeholder Image">
       <div class="xat-name">Nume Xat</div>
     </div>
     <div class="hexagon-radio">
