--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     }
 
     .hexagon-xat {
-      position: absolute;
-      left: -180px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 150px;
-      height: 150px;
-      background-color: #e35515;
-      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-      z-index: 1;
+          position: absolute;
+    left: 10px;
+    top: 25%;
+    transform: translateY(-50%);
+    width: 250px;
+    height: 250px;
+    background-image: url("https://xatimg.com/image/qHNgPvFkBtVV.png");
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    z-index: 1;
     }
 
     .hexagon-xat img {
