--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" data-lt-installed="true"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hexagon Radio Player</title>
@@ -9,7 +7,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 800px;
+      weight: 800px;
       margin: 0;
       background-color: #f2f2f2;
       font-family: Arial, sans-serif;
@@ -103,8 +102,8 @@
 <body>
   <div class="hexagon-container">
     <div class="hexagon-xat">
-      <img src="https://via.placeholder.com/80" alt="Placeholder Image">
-      <div class="xat-name">Nume Xat</div>
+      
+      <div class="xat-name">xat Valhalla</div>
     </div>
     <div class="hexagon-radio">
       <div class="controls">
@@ -113,7 +112,7 @@
         <input type="range" class="volume-slider" min="0" max="100" value="50">
       </div>
     </div>
-  </div>
+  <div id="extwaiokist" style="display:none" v="fljme" q="5c78d3e8" c="638.1" i="644" u="17.30" s="04272401" sg="svr_09102316-ga_04272401-bai_04252415" d="0" w="false" e="}" a="2" m="BMe="><div id="extwaigglbit" style="display:none" v="fljme" q="5c78d3e8" c="638.1" i="644" u="17.30" s="04272401" sg="svr_09102316-ga_04272401-bai_04252415" d="0" w="false" e="}" a="2" m="BMe="></div></div></div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -157,5 +156,6 @@
       });
     });
   </script>
-</body>
-</html>
+
+
+</body></html>
