--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     transform: translateY(-50%);
     width: 250px;
     height: 250px;
-    background-image: url("https://xatimg.com/image/qHNgPvFkBtVV.png");
+    background-image: url("https://xatimg.com/image/OFpwnbqu27iF.png");
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
     z-index: 1;
     }
