--- a/index.html
+++ b/index.html
@@ -46,9 +46,19 @@
       width: 250px;
       height: 250px;
       background-image: url("https://xatimg.com/image/OFpwnbqu27iF.png");
-      background-size: cover; /* Adăugăm această linie */
+      background-size: cover;
       clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
       z-index: 1;
+      transition: transform 0.3s ease; /* Adăugăm animația */
+    }
+
+    .hexagon-xat img {
+      width: 80px;
+      height: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .hexagon-xat .xat-name {
