--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       transition: transform 0.3s ease; /* Adăugăm animația */
     }
 
+    .hexagon-xat:hover {
+      transform: scale(1.05);
+    }
+
     .hexagon-xat img {
       width: 80px;
       height: auto;
