--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     .hexagon-radio {
       width: 100%;
       height: 100%;
-      background-image: url("https://xatimg.com/image/do5fQpC1LZmk.png");
+      background-image: url("https://xatimg.com/image/Z7vimGTE9yus.png");
       background-size: cover;
       background-position: center;
       position: absolute;
@@ -45,7 +45,7 @@
       transform: translateY(-50%);
       width: 250px;
       height: 250px;
-      background-image: url("https://xatimg.com/image/OFpwnbqu27iF.png");
+      background-image: url("https://xatimg.com/image/jakfpb45ipjm.png");
       background-size: cover;
       clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
       z-index: 1;
