--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: url('https://xatimg.com/image/V3Rxr66n8slA.png') no-repeat center center fixed;
-      background-size: cover;
+      background-color: transparent;
       font-family: Arial, sans-serif;
     }
 
@@ -27,7 +26,9 @@
     .hexagon-radio {
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-image: url('https://xatimg.com/image/V3Rxr66n8slA.png');
+      background-size: cover;
+      background-position: center;
       position: absolute;
       clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
       transition: transform 0.3s ease, background-color 0.3s ease;
@@ -35,7 +36,6 @@
 
     .hexagon-container:hover .hexagon-radio {
       transform: scale(1.05);
-      background-color: rgba(255, 255, 255, 1);
     }
 
     .controls {
