--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     .controls {
       position: absolute;
-      bottom: 20px;
+      bottom: 80px; /* Mutat mai sus */
       left: 50%;
       transform: translateX(-50%);
       color: #e35515;
@@ -53,7 +53,7 @@
       height: 40px;
       background-color: rgba(255, 255, 255, 0.8);
       border: none;
-      margin-right: 10px;
+      margin: 0 5px;
       cursor: pointer;
       background-size: 100% 100%;
       transition: transform 0.3s ease, background-color 0.3s ease;
@@ -77,6 +77,28 @@
       margin-top: 10px;
     }
 
+    .radio-info {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #fff;
+      text-align: center;
+      z-index: 2;
+    }
+
+    .radio-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin: 0;
+      color: #e35515;
+    }
+
+    .listeners-count {
+      font-size: 16px;
+      margin: 5px 0 0;
+    }
+
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -90,6 +112,10 @@
 <body>
   <div class="hexagon-container">
     <div class="hexagon-radio">
+      <div class="radio-info">
+        <div class="radio-title">Radio XYZ</div>
+        <div class="listeners-count">Listeners: 125</div>
+      </div>
       <div class="controls">
         <button class="play-btn"></button>
         <button class="volume-btn"></button>
